--- a/src/app/features/heroes/pages/hero-list-page/hero-list-page.html
+++ b/src/app/features/heroes/pages/hero-list-page/hero-list-page.html
@@ -9,6 +9,7 @@
       <app-hero-list
         [heroesData]="heroService.paginatedHeroes()"
         [hasFilters]="hasActiveFilters()"
+        (heroAction)="onHeroAction($event)"
         (pageChange)="onPageChange($event)"
         (pageSizeChange)="onPageSizeChange($event)"
       >
