feat: implement card header in layout

--- a/src/app/features/heroes/pages/layout-page/layout-page.html
+++ b/src/app/features/heroes/pages/layout-page/layout-page.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="heroes-layout">
+  <app-card-header
+    [config]="currentPageConfig()"
+    (addClick)="navigateToCreate()"
+  />
+  <router-outlet />
+</div>
